WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158477
[Win] Imported markup insertion test is failing.
https://bugs.webkit.org/show_bug.cgi?id=158477
Summary
[Win] Imported markup insertion test is failing.
Per Arne Vollan
Reported
2016-06-07 06:03:57 PDT
The test imported/w3c/web-platform-tests/html/dom/dynamic-markup-insertion/opening-the-input-stream/011.html is failing.
Attachments
Patch
(1.47 KB, patch)
2016-06-07 06:15 PDT
,
Per Arne Vollan
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-07 06:15:08 PDT
Created
attachment 280702
[details]
Patch
Per Arne Vollan
Comment 2
2016-06-07 11:22:28 PDT
Thanks for reviewing!
Per Arne Vollan
Comment 3
2016-06-07 11:23:38 PDT
Committed
r201760
: <
https://trac.webkit.org/changeset/201760
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug