[Win] Imported markup insertion test is failing. https://bugs.webkit.org/show_bug.cgi?id=158477

Reviewed by Darin Adler.

Make sure the empty synchronous request is loaded after each test.

* DumpRenderTree/win/DumpRenderTree.cpp:
(runTest):


Canonical link: https://commits.webkit.org/176546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201760 268f45cc-cd09-0410-ab3c-d52691b4dbfc